# superinvestor

./: .gitignore  LICENSE  README.md  best-issues.md  best-plan.md  pyproject.toml
docs/: architecture.md
src/superinvestor/: __init__.py  cli.py  config.py
src/superinvestor/agents/: protocol.py  registry.py  tools.py
src/superinvestor/agents/prompts/: __init__.py  fundamental.py  sentiment.py  synthesizer.py  technical.py
src/superinvestor/agents/providers/: anthropic.py  deepinfra.py  openrouter.py
src/superinvestor/data/: base.py  edgar.py  fred.py  polygon.py
src/superinvestor/engine/: pipeline.py
src/superinvestor/mcp/: __init__.py  client.py
src/superinvestor/models/: __init__.py  agent.py  analysis.py  base.py  enums.py  filings.py  holdings.py  market.py  portfolio.py  signals.py  thesis.py  watchlist.py
src/superinvestor/store/: __init__.py  analysis_store.py  base.py  cache_store.py  db.py  filing_store.py  holdings_store.py  market_store.py  portfolio_store.py  signal_store.py  thesis_store.py  watchlist_store.py
src/superinvestor/tui/: app.py  chat.py  commands.py
src/superinvestor/tui/widgets/: __init__.py  chat_input.py  message_list.py  side_panel.py
tests/: conftest.py  test_config.py
tests/test_agents/: test_anthropic_provider.py  test_registry.py
tests/test_architecture/: test_package_boundaries.py
tests/test_data/: test_edgar.py  test_fred.py  test_polygon.py  test_rate_limiter.py
tests/test_models/: test_models.py
tests/test_store/: test_store.py
tests/test_tui/: test_app.py
