[project]
name = "superinvestor-ai"
version = "0.3.0"
description = "AI-powered quantitative trading agent harness"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Silu Panda", email = "31051721+SiluPanda@users.noreply.github.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "typer>=0.12",
    "apscheduler>=3.10",
    "textual>=0.80",
    "textual-plotext>=0.2",
    "anthropic>=0.52",
    "mcp>=1.0",
]

[project.optional-dependencies]
openai = ["openai-agents>=0.13"]
openrouter = ["openai>=1.0"]
google = ["google-adk>=1.28"]
all = [
    "openai-agents>=0.13",
    "openai>=1.0",
    "google-adk>=1.28",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.8",
]

[project.scripts]
superinvestor = "superinvestor.cli:main"

[project.urls]
Homepage = "https://github.com/SiluPanda/superinvestor"
Repository = "https://github.com/SiluPanda/superinvestor"
Issues = "https://github.com/SiluPanda/superinvestor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superinvestor"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
